syntax = "proto3";

package v1;

import "api/v1/empty.proto";
import weak "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "v1";

message BillingMetricsRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

message SecuredResourcesMetrics {
  int32 nodes = 1;
  int32 millicores = 2;
}

message BillingMetricsInsertRequest {
  google.protobuf.Timestamp ts = 1;
  SecuredResourcesMetrics metrics = 2;
}

message BillingMetricsResponse {
  message BillingMetricsRecord {
    google.protobuf.Timestamp ts = 1;
    SecuredResourcesMetrics metrics = 2;
  }
  repeated BillingMetricsRecord record = 1;
}

service BillingMetricsService {
  rpc GetMetrics(BillingMetricsRequest) returns (BillingMetricsResponse) {
    option (google.api.http) = {get: "/v1/billing"};
  }
  rpc PutMetrics(BillingMetricsInsertRequest) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/billing"
      body: "*"
    };
  }
}
